<resources>
    <string name="app_name">Tic Tac Toe</string>

    <string name="homeTitle">Tic Tac Toe</string>
    <string name="homePlayButton">Play</string>

    <string name="playerSubmitButton">Enter</string>
    <string name="playerTitle">Enter Your Name</string>
    <string name="player1">Player One</string>
    <string name="player2">Player Two</string>
    <string name="nameHint">Enter Your Name</string>

    <string name="playAgain">Play Again</string>
    <string name="goHome">Home</string>

</resources>