<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerSetup"
    android:background="#D7CCC8">

    <TextView
        android:id="@+id/setupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/playerTitle"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/playerOneSetup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/playerOneName"
        app:layout_constraintStart_toStartOf="@+id/playerOneName" />

    <TextView
        android:id="@+id/playerTwoSetup"
        android:layout_width="113dp"
        android:layout_height="17dp"
        android:text="@string/player2"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/playerTwoName"
        app:layout_constraintStart_toStartOf="@+id/playerTwoName" />

    <EditText
        android:id="@+id/playerOneName"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_marginTop="116dp"
        android:ems="10"
        android:hint="@string/nameHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setupTitle" />

    <EditText
        android:id="@+id/playerTwoName"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nameHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerOneName" />

    <Button
        android:id="@+id/enterSetUpButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:background="@drawable/main_play_button"
        android:onClick="enterSetUpButton"
        android:text="@string/playerSubmitButton"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerTwoName" />
</androidx.constraintlayout.widget.ConstraintLayout>